--- a/candela_obscura/candela_obscura_qsg.html
+++ b/candela_obscura/candela_obscura_qsg.html
@@ -1,1 +1,7 @@
-只是占位，markdown没写完之前不会处理html
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
