--- a/candela_obscura/candela_obscura_qsg.html
+++ b/candela_obscura/candela_obscura_qsg.html
@@ -44,6 +44,21 @@
     </style>
 </head>
 <body>
+    <div class="sidebar">
+        <h2>目录</h2>
+        <ul>
+            <li><a href="#introduction">介绍</a></li>
+            <li><a href="#content-warning">内容警告</a></li>
+            <li><a href="#how-to-use">如何使用本指南</a></li>
+            <li><a href="#rules">法则</a></li>
+            <li><a href="#mechanics">机制</a></li>
+            <li><a href="#character-creation">创建角色</a></li>
+            <li><a href="#relationships-equipment-damage">人际、装备、伤害标记</a></li>
+            <li><a href="#rings">环</a></li>
+            <li><a href="#scars">伤疤&“勋章”</a></li>
+            <li><a href="#worldview">暗烛世界观</a></li>
+        </ul>
+    </div>
     <table style="margin-left: auto; margin-right: auto;">
         <tr>
             <td>
